# yakumo

./: .claude-context.md  .gitattributes  .gitignore  .npmrc  .oxfmtignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FEATURES.md  NOTICE.md  README.md  TODO.md  biome.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
crates-cli/yaak-cli/: Cargo.toml  README.md
crates-cli/yaak-cli/src/: cli.rs  context.rs  main.rs  plugin_events.rs  ui.rs  version.rs  version_check.rs
crates-cli/yaak-cli/tests/: environment_commands.rs  folder_commands.rs  request_commands.rs  send_commands.rs  workspace_commands.rs
crates-tauri/yaak-app/: Cargo.toml  tauri.conf.json  tauri.development.conf.json  tauri.release.conf.json
crates-tauri/yaak-app/bindings/: index.ts
crates-tauri/yaak-app/macos/: entitlements.yaaknode.plist
crates-tauri/yaak-app/src/: commands.rs  error.rs  grpc.rs  history.rs  http_request.rs  import.rs  lib.rs  models_ext.rs  plugin_events.rs  plugins_ext.rs  render.rs  sync_ext.rs  updates.rs  uri_scheme.rs  window.rs  window_menu.rs  ws_ext.rs
crates-tauri/yaak-fonts/: Cargo.toml  package.json
crates-tauri/yaak-fonts/bindings/: gen_fonts.ts
crates-tauri/yaak-fonts/src/: commands.rs  error.rs
crates-tauri/yaak-mac-window/: Cargo.toml  index.ts
crates-tauri/yaak-mac-window/permissions/: default.toml
crates-tauri/yaak-mac-window/src/: commands.rs  mac.rs
crates/yaak/: Cargo.toml
crates/yaak-crypto/: Cargo.toml  package.json
crates/yaak-crypto/src/: encryption.rs  error.rs  lib.rs  manager.rs
crates/yaak-git/: Cargo.toml  index.ts  package.json
crates/yaak-git/bindings/: gen_models.ts
crates/yaak-git/src/: binary.rs  branch.rs  commit.rs  credential.rs  error.rs  init.rs  lib.rs  remotes.rs  status.rs
crates/yaak-grpc/: Cargo.toml
crates/yaak-grpc/src/: client.rs  codec.rs  error.rs  json_schema.rs  lib.rs  manager.rs  reflection.rs  transport.rs
crates/yaak-license/: Cargo.toml  index.ts  package.json
crates/yaak-license/bindings/: models.ts
crates/yaak-license/src/: commands.rs  error.rs  license.rs
crates/yaak-models/: Cargo.toml  package.json
crates/yaak-models/bindings/: gen_models.ts
crates/yaak-models/blob_migrations/: 00000000000000_init.sql
crates/yaak-models/guest-js/: store.ts
crates/yaak-models/migrations/: 20241217204951_docs.sql  20250102141937_sync.sql  20250108205117_workspace-meta.sql  20250114160022_remove-workspace-sync-setting.sql  20250401122407_encrypted-key.sql  20250507140702_remove-ev-sync-states.sql  20250530174021_graphql-introspection.sql  20250604102922_colored-methods-setting.sql  20250608150053_font-settings.sql  20250611120000_environment-color.sql  20250918141129_request-folder-environments.sql  20251219074602_default-workspace-headers.sql  20260104000000_hotkeys.sql  20260111000000_dns-timing.sql  20260216000000_model-changes.sql  20260301000000_plugin-source-and-unique-directory.sql
crates/yaak-models/src/: db_context.rs  error.rs  lib.rs  migrate.rs  models.rs  query_manager.rs  render.rs  util.rs
crates/yaak-plugins/: Cargo.toml  index.ts  package.json
crates/yaak-plugins/bindings/: gen_events.ts  gen_models.ts
crates/yaak-plugins/src/: api.rs  checksum.rs  error.rs  events.rs  install.rs  lib.rs  manager.rs  native_template_functions.rs  nodejs.rs  plugin_handle.rs  plugin_meta.rs  server_ws.rs  template_callback.rs  util.rs
crates/yaak-sync/: Cargo.toml  index.ts  package.json
crates/yaak-sync/bindings/: gen_models.ts  gen_watch.ts
crates/yaak-sync/src/: models.rs  sync.rs
crates/yaak-templates/: Cargo.toml  build-wasm.cjs  package.json
crates/yaak-templates/pkg/: package.json  yaak_templates.d.ts  yaak_templates.js  yaak_templates_bg.js  yaak_templates_bg.wasm  yaak_templates_bg.wasm.d.ts
crates/yaak-templates/src/: escape.rs  format_json.rs  lib.rs  strip_json_comments.rs
crates/yaak-tls/: Cargo.toml
crates/yaak-tls/src/: lib.rs
crates/yaak-ws/: Cargo.toml  index.ts  package.json
crates/yaak-ws/src/: connect.rs  error.rs  manager.rs  render.rs
crates/yaak/src/: error.rs  lib.rs  plugin_events.rs  render.rs  send.rs
crates/yaku-cli/: Cargo.toml  README.md
crates/yaku-cli/src/: cli.rs  context.rs  main.rs  version.rs  version_check.rs
crates/yaku-cli/tests/: cookie_jar_commands.rs  environment_commands.rs  folder_commands.rs  request_commands.rs  send_commands.rs  workspace_commands.rs
crates/yakumo/: Cargo.toml
crates/yakumo-features/: Cargo.toml  index.ts  package.json
crates/yakumo-features/bindings/: gen_events.ts  gen_models.ts
crates/yakumo-features/src/: error.rs  events.rs  lib.rs
crates/yakumo-git/: Cargo.toml  index.ts  package.json
crates/yakumo-git/bindings/: gen_git.ts
crates/yakumo-git/src/: add.rs  binary.rs  clone.rs  error.rs  fetch.rs  log.rs  pull.rs  push.rs  repository.rs  reset.rs  status.rs  unstage.rs  util.rs
crates/yakumo-grpc/: Cargo.toml
crates/yakumo-grpc/src/: any.rs  client.rs  error.rs  manager.rs  reflection.rs  transport.rs
crates/yakumo-license/: Cargo.toml  index.ts  package.json
crates/yakumo-license/bindings/: license.ts
crates/yakumo-license/permissions/: default.toml
crates/yakumo-license/src/: error.rs  lib.rs  license.rs
crates/yakumo-ws/: Cargo.toml  index.ts  package.json
crates/yakumo-ws/src/: connect.rs  error.rs  lib.rs  manager.rs  render.rs
crates/yakumo/src/: error.rs  render.rs
src-tauri/: .gitignore  Cargo.toml  package.json  tauri.conf.json  tauri.linux.conf.json  tauri.release.conf.json
src-tauri/bindings/: gen_watch.ts  index.ts  plugins_ext.ts
src-tauri/capabilities/: default.json
src-tauri/icons/dev/: icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/src/: commands.rs  encoding.rs  error.rs  file_commands.rs  formatting.rs  git_ext.rs  grpc.rs  grpc_commands.rs  history.rs  http_request.rs  import.rs  lib.rs  metadata_commands.rs  models_ext.rs  notifications.rs  path_guard.rs  render.rs  sync_ext.rs  template_commands.rs  update_commands.rs  updates.rs  uri_scheme.rs  window.rs  window_commands.rs  window_menu.rs  ws_ext.rs
(+1055 files in other folders)
