[workspace]
resolver = "2"
members = [
  "crates/*",
  "src-tauri",
]

[workspace.dependencies]
chrono = "0.4.42"
hex = "0.4.3"
keyring = "3.6.3"
log = "0.4.29"
reqwest = "0.12.20"
rustls = { version = "0.23.34", default-features = false }
rustls-platform-verifier = "0.6.2"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = "2.9.5"
tauri-plugin = "2.5.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"
thiserror = "2.0.17"
tokio = "1.48.0"
ts-rs = "11.1.0"

# Internal crates - shared
yakumo-core = { path = "crates/yakumo-core" }
yakumo = { path = "crates/yakumo" }
yakumo-common = { path = "crates/yakumo-common" }
yakumo-crypto = { path = "crates/yakumo-crypto" }
yakumo-git = { path = "crates/yakumo-git" }
yakumo-grpc = { path = "crates/yakumo-grpc" }
yakumo-http = { path = "crates/yakumo-http" }
yakumo-models = { path = "crates/yakumo-models" }
yakumo-features = { path = "crates/yakumo-features" }
yakumo-sse = { path = "crates/yakumo-sse" }
yakumo-sync = { path = "crates/yakumo-sync" }
yakumo-templates = { path = "crates/yakumo-templates" }
yakumo-tls = { path = "crates/yakumo-tls" }
yakumo-ws = { path = "crates/yakumo-ws" }
yakumo-api = { path = "crates/yakumo-api" }

# Internal crates - Tauri-specific
yakumo-fonts = { path = "crates/yakumo-fonts" }
yakumo-license = { path = "crates/yakumo-license" }
yakumo-mac-window = { path = "crates/yakumo-mac-window" }
yakumo-tauri-utils = { path = "crates/yakumo-tauri-utils" }

[profile.release]
strip = false
