[package]
name = "yaak-mac-window"
links = "yaak-mac-window"
version = "0.1.0"
edition = "2024"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
log = { workspace = true }
objc = "0.2.7"
rand = "0.9.0"
csscolorparser = "0.7.2"

[dependencies]
tauri = { workspace = true }
