[package]
name = "yaku-cli"
version = "0.1.0"
edition = "2024"
publish = false
description = "Yaku CLI - Yakumo API 命令行工具"

[[bin]]
name = "yaku"
path = "src/main.rs"

[dependencies]
arboard = "3"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dirs = "6"
env_logger = "0.11"
futures = "0.3"
inquire = { version = "0.7", features = ["editor"] }
hex = { workspace = true }
keyring = { workspace = true, features = ["apple-native", "windows-native", "sync-secret-service"] }
log = { workspace = true }
rand = "0.8"
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "net",
  "signal",
  "time",
] }
yakumo = { workspace = true }
yakumo-crypto = { workspace = true }
yakumo-http = { workspace = true }
yakumo-models = { workspace = true }
yakumo-features = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
