[package]
name = "yakumo-features"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22.1"
chrono = { workspace = true }
dunce = "1.0.4"
futures-util = "0.3.30"
hex = { workspace = true }
hmac = "0.12"
jsonwebtoken = "9"
keyring = { workspace = true, features = ["apple-native", "windows-native", "sync-secret-service"] }
log = { workspace = true }
md-5 = "0.10"
path-slash = "0.2.1"
quick-xml = "0.39.2"
rand = "0.9.0"
regex = "1"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = "0.10"
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs"] }
tokio-tungstenite = "0.26.1"
ts-rs = { workspace = true }
urlencoding = "2"
uuid = { version = "1", features = ["v1", "v3", "v4", "v5", "v6", "v7"] }
yakumo-common = { workspace = true }
yakumo-crypto = { workspace = true }
yakumo-models = { workspace = true }
yakumo-templates = { workspace = true }
zip-extract = "0.4.0"
