[package]
name = "yakumo-grpc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.97"
async-recursion = "1.1.1"
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http2"] }
hyper-util = { version = "0.1.13", default-features = false, features = ["client-legacy"] }
log = { workspace = true }
md5 = "0.7.0"
prost = "0.14.3"
prost-reflect = { version = "0.16.3", default-features = false, features = ["serde", "derive"] }
prost-types = "0.14.3"
protox = "0.9.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = { version = "0.14.5", default-features = false, features = ["transport"] }
tonic-reflection = "0.14.5"
yakumo-tls = { workspace = true }
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3"
